--- a/fridge-magnet.conf
+++ b/fridge-magnet.conf
@@ -1,6 +1,7 @@
 apps:name=barrier|apps=barrier
 apps:name=brew|apps=python3-bleak,python3-construct
 apps:name=cbpi|apps=chromium,libatlas-base-dev,pipx,python3-bluez
+apps:name=vim|apps=vim-tiny|remove=nano
 bootconfig:inline|hdmi_group=2|hdmi_force_hotplug=1|hdmi_mode=87|hdmi_ignore_edid|hdmi_drive=2|dtoverlay=w1-gpio|hdmi_cvt=1024 600 60 6 0 0 0
 disables:piwiz
 graphics:graphics=X11
