home-assistant supervised-installer

--- a/fridge-magnet.conf
+++ b/fridge-magnet.conf
@@ -1,12 +1,15 @@
 apps:name=barrier|apps=barrier
 apps:name=brew|apps=python3-bleak,python3-construct
 apps:name=cbpi|apps=chromium,libatlas-base-dev,pipx,python3-bluez
+apps:name=home-assistant-supervised-installer|apps=apparmor,bluez,cifs-utils,curl,dbus,jq,libglib2.0-bin,lsb-release,network-manager,nfs-common,systemd-journal-remote,udisks2,wget # removed systemd-resolved because it interferes with phase1
 apps:name=vim|apps=vim-tiny|remove=nano
 bootconfig:inline|hdmi_group=2|hdmi_force_hotplug=1|hdmi_mode=87|hdmi_ignore_edid|hdmi_drive=2|dtoverlay=w1-gpio|hdmi_cvt=1024 600 60 6 0 0 0
 disables:piwiz
 graphics:graphics=X11
 L10n:host
 network:ssh=socket|wifissid=jkt-indoor|wifipassword=${WIFI_PASSWORD}|wificountry=US
+runscript:script=home-assistant-supervised-installer
+runatboot:script=home-assistant-supervised-installer|args=firstboot|output=/etc/sdm/assets/runscript/home-assistant-supervised-installer.firstboot.log
 user:deluser=pi
 user:addgroup=ssh,1001
-user:adduser=jkt|uid=1000|gid=1000|password=${JKT_PASSWORD}|groupadd=ssh|redact
+user:adduser=jkt|uid=1000|Group=1000|password=${JKT_PASSWORD}|groups=ssh,docker|redact
